fixes #112 Double tapTarget initialization and z-index issues fixed

--- a/resources/assets/sass/components/_app.scss
+++ b/resources/assets/sass/components/_app.scss
@@ -1,8 +1,8 @@
 html,
-button.btn,
-input {
-  font-family: Roboto,Oxygen-Sans,-apple-system,BlinkMacSystemFont,"Segoe UI",Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-}
+ button.btn,
+ input {
+   font-family: Roboto,Oxygen-Sans,-apple-system,BlinkMacSystemFont,"Segoe UI",Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+ }
 
 a[href].btn,
 a[href].btn > i.mdi,
@@ -723,4 +723,8 @@ ul.autocomplete-content.dropdown-content {
 
 .collapsible-tr-body {
   display: none;
+}
+
+.tap-target-wrapper.open + ul {
+  z-index: 2001;
 }
