--- a/resources/assets/sass/components_dark/_app.scss
+++ b/resources/assets/sass/components_dark/_app.scss
@@ -818,3 +818,7 @@ ul.autocomplete-content.dropdown-content {
 .collapsible-tr-body {
   display: none;
 }
+
+.tap-target-wrapper.open + ul {
+  z-index: 2001;
+}
